[package]
name = "SATAN"
version = "0.1.0"
authors = ["Mariana Meireles <mariana@psychonautgirl.space>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vader_sentiment = { path = "/home/mariana/development/vader-sentiment-rust" }
spider = "1.0.2"
